adjusting the background img size
adjust the background size and position

--- a/css/hero.css
+++ b/css/hero.css
@@ -10,8 +10,8 @@ body{
 header{
     background: url(https://cdn0.gamesports.net/content_teasers/149000/149285.jpg?1699371515);
     background-repeat: no-repeat; 
-    background-size: 1400px;
-    background-position: 0%;
+    background-size: 105%;
+    background-position: center;
     text-align: center;
     padding-top: 40px;
     padding-bottom: 40px;
